fix: removes layout shift while modal window open and horizontal scrollbar

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -7,3 +7,7 @@
     display: block;
   }
 }
+
+[data-scroll-lock] .root {
+  margin-right: var(--scrollbar-compensation);
+}
